# timestudy-backend

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  daily_log.py  oauth.py  respondent.py  user.py
app/routers/: __init__.py  auth.py  daily_logs.py  oauth.py  respondents.py
app/schemas/: __init__.py  common.py  daily_log.py  oauth.py  respondent.py  user.py
app/services/: __init__.py  auth_service.py  oauth_service.py
docs/: conf.py  index.rst  requirements.txt
docs/guide/: oauth2.md  oauth2.rst  quickstart.md  quickstart.rst
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_daily_logs.py  test_oauth.py  test_respondents.py
